--- a/blogspot.html
+++ b/blogspot.html
@@ -5,8 +5,18 @@
         <link rel="stylesheet" href="ccs/estilos.css"/>
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este el parrafo del inicio</p>
+        <div id="container">
+            <div id="post">
+                <h1>Este es el titulo 
+                    atractivo e interesante del
+                    post</h1>
+                <p>Y este es el parrafo de
+                inicio donde vamos a explicar 
+                las cosas increibles que se
+                pueden hacer con ramas</p>
+            </div>
+        </div>
+            
     </body>
 
 </html>
