--- a/blogspot.html
+++ b/blogspot.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>El titulo del Post</title>
+        <title>Bienvenido Hyperblog</title>
         <link rel="stylesheet" href="ccs/estilos.css"/>
     </head>
     <body>
